Closed (duplicated)
Regression in 1.15.1: Three/four finger gestures not working any more
Summary
Since the 1.15.1 upgrade in Fedora 31 testing, three/four finger gestures like swipes do not work any more. Only the very first e.g. three finger swipe in a session succeeds, every one after that just creates the following output in the journal:
libinput error: event4 - SynPS/2 Synaptics TouchPad: kernel bug: touch 1 ended and began in in same frame.
Downgrading to 1.15.0 reliable makes it work again.
Unfortunately I was to late to add bad karma to the update on bodhi, so this no goes to stable :(
Hardware information:
Thinkpad T460p
I: Bus=0011 Vendor=0002 Product=0007 Version=01b1
N: Name="SynPS/2 Synaptics TouchPad"
P: Phys=isa0060/serio1/input0
S: Sysfs=/devices/platform/i8042/serio1/input/input5
U: Uniq=
H: Handlers=mouse0 event4
B: PROP=5
B: EV=b
B: KEY=e520 10000 0 0 0 0
B: ABS=660800011000003
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information